[package]
name = "smart-contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "smart_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
ahash = "=0.8.7"
solana-program = "1.7"
thiserror = "1.0"
static_assertions = "1.1.0"
num-derive = "0.4.1"
num-traits = "0.2"

